 aclocal.m4                Locally Modified          465 
 configure                 Locally Modified          465 
 Makefile.in               Locally Modified          465 
 configure.in              Locally Modified          465 

Directory docs
 Makefile.in               Locally Modified          465 
 Makefile.am               Locally Modified          465 

Directory libperl
 Makefile.in               Locally Modified          465 

- changed intall-docs target to install-doc
- install-doc now installs at $htmldir
- $htmldir is set to $docdir/html by automake

----------
mcadler     Date: Fri Aug  9 13:36:49 EDT 2013  CSN: CSN-leap-467
                  Fri Aug  9 17:36:49 UTC 2013


Directory modules/leap/virtual-platform/virtual-devices/devices/front-panel/hybrid
 hybrid-fp.cpp             Locally Modified          466 
 hybrid-fp.h               Locally Modified          466 

Directory modules/leap/libraries/platform-services/common-services/stats-service
 stats-service.rrr         Locally Modified          466 
 stats-service.h           Locally Modified          466 
 stats-service.bsv         Locally Modified          466 
 stats-service.cpp         Locally Modified          466 

- Changes similar to the last set of changes for debug scan.  Statistics now
  use only services with "in" methods and no "out" methods, thus using only
  LI channels.

- Front panel deals with shutdown more gracefully.

----------
mcadler     Date: Sat Aug 31 13:57:05 EDT 2013  CSN: CSN-leap-468
                  Sat Aug 31 17:57:05 UTC 2013


Directory modules/leap/libraries/librl/base
 counters.bsv              Locally Modified          467 

Add a method to counters that returns the value of the counter at the end of
the cycle, after updates have been applied.  This is in addition to the
current value() method that returns the counter value at the beginning of
the FPGA cycle.

Merge COUNTER and COUNTER_Z into the same interface and use a single
implementation.